Fixed screenshot and trailer layouts on narrower screens.

--- a/flipperoferidanus.css
+++ b/flipperoferidanus.css
@@ -86,8 +86,8 @@ li a:hover:not(.active) {
 }
 
 #announcement {
-    padding:20px;
-    background-color:#397332;
+    padding: 20px;
+    background-color: #397332;
     background-image: url(assets/announceback.jpg);
     height: 110px;
     text-align: center;
@@ -97,16 +97,16 @@ li a:hover:not(.active) {
 }
 
 #headerbar {
-    padding:20px;
-    background-color:#C7C7C7;
+    padding: 20px;
+    background-color: #C7C7C7;
     background-image: url(assets/headerback.jpg);
     height: 60px;
     text-align: center;
 }
 
 #screenshots {
-    padding:20px;
-    background-color:#000000;
+    padding: 50px;
+    background-color: #000000;
     background-image: url(assets/back1.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -115,9 +115,11 @@ li a:hover:not(.active) {
 }
 
 #trailer {
-    min-height: 580px;
-    padding:20px;
-    background-color:#000000;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%;
+    background-color: #000000;
     background-image: url(assets/back2.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -126,8 +128,8 @@ li a:hover:not(.active) {
 }
 
 #desc {
-    padding:20px;
-    background-color:#000000;
+    padding: 20px;
+    background-color: #000000;
     background-image: url(assets/back3.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -153,8 +155,8 @@ li b {
 }
 
 #foot {
-    padding:20px;
-    background-color:#000000;
+    padding: 20px;
+    background-color: #000000;
     text-align: center;
     font-size: 25px;
 }
